--- a/src/index.html
+++ b/src/index.html
@@ -3,17 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <title>Example</title>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="https://www.google.com/recaptcha/api.js?render=${process.env.APIKEYRECAPTCHA}"></script>
   <script>
-  grecaptcha.ready(function() {
-      grecaptcha.execute('${process.env.APIKEYRECAPTCHA}', {action: 'homepage'}).then(function(token) {
-        console.log("a");
-      });
-  });
+    grecaptcha.ready(function() {
+        grecaptcha.execute('${process.env.APIKEYRECAPTCHA}', {action: 'homepage'}).then(function(token) {
+          var recaptchaResponse = document.getElementById('recaptchaResponse');
+          recaptchaResponse.value = token
+        });
+    });
   </script>
 </head>
 <body>
-  
-done!
+
 </body>
 </html>
